Checking in database

--- a/limewire_development.db.properties
+++ b/limewire_development.db.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 1.8.0.5
-#Mon Dec 29 21:15:00 CST 2008
+#Sun Jan 04 23:43:35 EST 2009
 hsqldb.script_format=0
 runtime.gc_interval=0
 sql.enforce_strict_size=false
